--- a/app/views/caves-karsts.html
+++ b/app/views/caves-karsts.html
@@ -167,7 +167,7 @@
     <div skrollr class="div-fixed z-100" data-19999="top:16rem;" data-20000="opacity:0; left:50rem;" data-21000="opacity:1; left:5rem;" data-22000="top:16rem;" data-24999="top:-40rem;" data-25000="opacity:1; top:-40rem;" data-26000="opacity:0; top:-60rem;">
       <div id="ck-image-03" class="image-frame-tall"></div>
     </div>
-    <div skrollr class="div-fixed z-450" data-19999="left:18rem;" data-20000="opacity:0; top:58rem;" data-21000="opacity:1; top:52rem;" ata-24000="opacity:1; top:52rem;" data-25000="opacity:1; top:53rem;" data-26000="opacity:0; top:58rem;">
+    <div skrollr class="div-fixed z-500" data-19999="left:18rem;" data-20000="opacity:0; top:58rem;" data-21000="opacity:1; top:52rem;" data-24500="opacity:1; top:52rem;" data-26000="opacity:0; top:58rem;">
       <div class="text-label">
         <p>Descent</p>
       </div>
