--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="contact">
     <!-- Backgrounds -->
-    <div id="ripple-1" class="div-fixed z-50 background flip-image-hor" style="opacity:0.1; margin-left:-4rem; margin-top:-3rem;"></div>
+    <div id="ripple-1" class="div-fixed z-50 background flip-image-hor contact-bg"></div>
 
     <div class="z-300">
       <h1>Contact EAA<br/><small>Stay informed about your aquifer</small></h1>
