--- a/app/styles/general.css
+++ b/app/styles/general.css
@@ -33,6 +33,25 @@ a:hover, a:visited, a:link, a:active
 a:hover {
   color: #AB650D;
 }
+.nav, .pagination, .carousel, .panel-title a { 
+  cursor: pointer; 
+}
+.eaa-logo {
+  min-width: 80px;
+  max-width: 10%;
+  margin-top: 0.3rem;
+  margin-left: 0.5rem;
+  margin-right: 1rem;
+  margin-bottom: 0.3rem;
+}
+.apptitle {
+  position: relative;
+  top: 0.2rem;
+  bottom: 0;
+  font-weight: bold;
+  font-size: 30px;
+  color: #000;    
+}
 .footer {
   background-color: #111;
   border-top: 1px solid #333;
@@ -44,47 +63,6 @@ a:hover {
   margin-left: auto;
   margin-right: auto;
 }
-.bgvideo {
-    position: fixed;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    background: #000;
-    background-size: cover;
-    right: 0;
-    bottom: 0;
-    min-height: 100%;
-    min-width: 100%;
-  }
-.glyph-spacing-right {
-  padding-right: 0.8rem;
+.no-Ibar {
+  cursor: default;
 }
-.glyph-spacing-left {
-  padding-left: 0.8rem;
-}
-.overlay {
-  /*z-index: 100;*/
-  position: absolute;
-  max-width: 30%;
-  max-height: 30%;
-  border-radius: 15px;
-  border: 1px solid #8E8C7A;
-  box-shadow:2px 2px 7px 1px rgba(0,0,0,0.5);
-  /*bottom: 5rem;*/
-}
-.overlay-left {
-  z-index: 120;
-  left: 3rem;
-  bottom: 5rem;
-}
-.overlay-center {
-  z-index: 110;
-  left: 35%;
-  bottom: 6.5rem;
-}
-.overlay-right {
-  z-index: 100;
-  right: 3rem;
-  bottom: 8rem;
-}
-.text-black { color: #222; text-shadow: none; }
