--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -3,7 +3,7 @@
     <!-- Backgrounds -->
     <div id="ripple-1" class="div-fixed z-50 background flip-image-hor contact-bg"></div>
 
-    <div class="z-300">
+    <div class="div-fixed z-300">
       <h1>Contact EAA<br/><small>Stay informed about your aquifer</small></h1>
       <div class="contact-heading">
         <h3>Edwards Aquifer Authority</h3>
