--- a/app/views/about.html
+++ b/app/views/about.html
@@ -5,24 +5,23 @@
 
     <!-- Section 0 -->
     <div id="section00">
-      <div skrollr class="div-fixed z-450" data-0="left:5rem;" data-1000="opacity:1; top:5rem;" data-2000="opacity:0; top:0rem;">
+      <div skrollr class="div-fixed z-450" data-0="left:8rem;" data-1000="opacity:1; top:4rem;" data-2000="opacity:0; top:0rem;">
         <div class="text-title">
-          <h1>What Is The Aquiferium&#63;
-            <br/><small>The story behind the aquiferium project</small>
-          </h1>
+          <h1>What Is The Aquiferium&#63;</h1>
         </div>
+        <div class="subtitle">The story behind the aquiferium project</div>
       </div>
-      <div skrollr class="div-fixed z-400" data-0="top:17rem;" data-1000="opacity:1; left:5rem;" data-2000="opacity:0; left:-50rem;">
+      <div skrollr class="div-fixed z-400" data-0="top:12rem;" data-1000="opacity:1; left:5rem;" data-2000="opacity:0; left:-50rem;">
         <div class="text-frame">
           <p>Aquiferium began as a concept shortly after seeing a presentation by Dr. Suzanne Pierce (University of Texas at Austin) and viewing the MCSDSS application created by the Heat Seeker team for the <a href="http://www.encompassproject.org" target="_blank">Encompass Project</a>.</p>
         </div>
       </div>
-      <div skrollr class="div-fixed z-100" data-999="top:24rem;" data-1000="opacity:1; left:5rem;" data-2000="opacity:0; left:50rem;">
+      <div skrollr class="div-fixed z-100" data-999="top:18rem;" data-1000="opacity:1; left:5rem;" data-2000="opacity:0; left:50rem;">
         <div class="embededVideo">
           <embed-video data-ng-href="http://www.youtube.com/watch?v=SUhtSnl_ZRM" controls=1 width="100%" height="100%"><a href="http://www.youtube.com/watch?v={{ code }}">Watch</a></embed-video>
         </div>
       </div>
-      <div skrollr class="div-fixed z-450" data-0="left:18rem;" data-1000="opacity:1; top:61rem;" data-2000="opacity:0; top:80rem;">
+      <div skrollr class="div-fixed z-450" data-0="left:18rem;" data-1000="opacity:1; top:55rem;" data-2000="opacity:0; top:80rem;">
         <div class="text-label">
           <p>Heat Seeker</p>
         </div>
@@ -31,15 +30,15 @@
 
     <!-- Section 1 -->
     <div id="section01">
-      <div skrollr class="div-fixed z-400" data-1999="top:8rem; left:11rem;" data-2000="opacity:0; transform:scale(1,1);" data-3000="opacity:1;transform:scale(1.5,1.5);" data-4000="opacity:1;transform:scale(1.5,1.5);" data-5000="opacity:0; transform:scale(0.5,0.5);">
-        <div class="text-title text-spacer-left">
+      <div skrollr class="div-fixed z-400" data-1999="top:8rem; left:15rem;" data-2000="opacity:0; transform:scale(1,1);" data-3000="opacity:1;transform:scale(1.5,1.5);" data-4000="opacity:1;transform:scale(1.5,1.5);" data-5000="opacity:0; transform:scale(0.5,0.5);">
+        <div class="text-title">
           <h1 class="imagine">Imagine Aquiferium!</h1>
         </div>
       </div>
-      <div skrollr class="div-fixed z-300" data-1999="top:18rem;" data-2000="opacity:0; left:60rem;" data-3000="opacity:1; left:40rem;" data-4000="opacity:1; left:40rem;" data-5000="opacity:0; left:60rem;">
-        <div id="about-image-01" class="image-medium concept"></div>
+      <div skrollr class="div-fixed z-300" data-1999="top:18rem;" data-2000="opacity:0; left:60rem;" data-3000="opacity:1; left:38rem;" data-4000="opacity:1; left:38rem;" data-5000="opacity:0; left:60rem;">
+        <div id="about-image-00" class="image-medium concept"></div>
       </div>
-      <div skrollr class="div-fixed z-250" data-1999="top:18rem;" data-2000="opacity:0; left:-10rem;" data-3000="opacity:1; left:3rem;" data-4000="opacity:1; left:3rem;" data-5000="opacity:0; left:-10rem;">
+      <div skrollr class="div-fixed z-250" data-1999="top:18rem;" data-2000="opacity:0; left:-10rem;" data-3000="opacity:1; left:4rem;" data-4000="opacity:1; left:4rem;" data-5000="opacity:0; left:-10rem;">
         <div id="about-image-01" class="image-medium concept"></div>
       </div>
       <div skrollr class="div-fixed z-450" data-1999="left:18rem;" data-2000="opacity:0; top:58rem;" data-3000="opacity:1; top:44rem;" data-4000="opacity:1; top:44rem;" data-5000="opacity:0; top:58rem;">
@@ -66,14 +65,14 @@
           </div>
         </div>
       </div>
-      <div skrollr class="div-fixed z-450" data-4999="left:45rem;" data-5000="opacity:0; top:58rem;" data-6000="opacity:1; top:45rem;">
+      <div skrollr class="div-fixed z-450" data-4999="left:45rem;" data-5000="opacity:0; top:58rem;" data-6000="opacity:1; top:41rem;">
         <div class='quotedby'>Marc Friberg<br/>Executive Director Public Policy &amp; External Affairs<br/>Edwards Aquifer Authority</div>
       </div>
     </div>
 
     <!-- Explore Link -->
     <div id="end">
-      <div skrollr class="div-fixed z-500" data-6000="left:12rem;" data-6500="opacity:0; top:58rem;" data-7000="opacity:1; top:47rem;">
+      <div skrollr class="div-fixed z-500" data-6000="left:12rem;" data-6500="opacity:0; top:58rem;" data-7000="opacity:1; top:42rem;">
         <div class="end-link">
           <a href="#/explore">Continue Exploring
             <div id="holder">
