--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -18,6 +18,7 @@
           </p>
         </div>
       </div>
+      <img class="img-responsive eaa-logo-contact" src="./images/eaa_branding/eaa-logo-color.png" />
     </div>
   </div>
 </div>
