--- a/app/styles/general.css
+++ b/app/styles/general.css
@@ -44,13 +44,27 @@ a:hover {
   margin-right: 1rem;
   margin-bottom: 0.3rem;
 }
+.eaa-logo-contact {
+  margin: 2rem 0rem 0rem 1rem;
+  padding: 1rem;
+  background-color: #fff;
+  border: 2px solid #000;
+  -webkit-border-radius: 0 4rem 0;
+  -moz-border-radius: 0 4rem 0;
+  border-radius: 0 4rem 0;
+}
 .apptitle {
-  position: relative;
-  top: 0.2rem;
-  bottom: 0;
-  font-weight: bold;
-  font-size: 30px;
-  color: #000;    
+  /*position: relative;*/
+  /*top: 0.2rem;*/
+  /*bottom: 0;*/
+  font-weight: 700;
+  /*font-size: 30px;*/
+  font-size: 1.2rem;
+  /*color: #000;    */
+}
+.subtitle {
+  font-size: 1.2rem;
+  color: rgba(198, 147, 10, 1);
 }
 .footer {
   background-color: #111;
