Code gunk n explore view.

--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -1,4 +1,4 @@
-<div class="container"> -->
+<div class="container">
   <div class="explore">
     <!-- Scroll Indicator -->
     <div skrollr class="div-fixed z-500" data-0="top:54rem" data-1000="opacity:1; left:9rem;" data-2000="opacity:0; left:-10rem;">
