--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="explore">
-  
-    <!-- Scroll Indicator -->
+  <div class="explore"> 
+    <div skrollr id="ripple-1" class="div-fixed z-50 background flip-image-hor" data-0="left:-2rem;" data-1="opacity:0.1; top:0%;" data-500="opacity:0.3; top:-15%;" data-3500="opacity:0.3; top:-90%;" data-4000="opacity:0.1; top:-100%;"></div>
+
     <div skrollr class="div-fixed z-500" data-0="top:54rem" data-1000="opacity:1; left:9rem;" data-2000="opacity:0; left:-10rem;">
       <div class="text-suggestion">Scroll to continue...
         <div id="holder">
@@ -10,11 +10,7 @@
         </div>
       </div>
     </div>
-
-    <!-- Backgrounds -->
-    <div skrollr id="ripple-1" class="div-fixed z-50 background flip-image-hor" data-0="left:-2rem;" data-1="opacity:0.1; top:0%;" data-500="opacity:0.3; top:-15%;" data-3500="opacity:0.3; top:-90%;" data-4000="opacity:0.1; top:-100%;"></div>
-
-    <!-- Section 0 -->
+    
     <div id="section00">
       <div skrollr class="div-fixed z-400" data-0="left:8rem;" data-1000="opacity:1; top:6.6rem;" data-2000="opacity:0; top:0rem;">
         <div class="text-title"><h1>Explore the Edwards Aquifer</h1></div>
@@ -32,7 +28,6 @@
       </div>
     </div>
 
-    <!-- Section 1 -->
     <div id="section01">
       <div skrollr class="div-fixed z-400" data-1999="top:8rem;" data-2000="opacity:0; left:-50rem;" data-3000="opacity:1; left:5rem;">
         <div class="text-frame">
@@ -51,7 +46,6 @@
       </div>
     </div>
 
-    <!-- Click Indicator -->
     <div skrollr class="div-fixed z-500" data-2999="top:54rem" data-3500="opacity:0; left:-10rem;" data-4000="opacity:1; left:9rem;">
       <div class="text-suggestion">Select a Map Marker to Continue
         <div id="holder">
@@ -61,4 +55,4 @@
       </div>
     </div>
   </div>
-<!-- </div>
+</div>
