Added in opacity tweak with transition of 100ms for Recharge interadtive. it looks better than the color scales at this time. Leaving as is and working on the Explore animation now.

--- a/app/views/caves-karsts.html
+++ b/app/views/caves-karsts.html
@@ -142,7 +142,7 @@
   <div id="section06">
     <div skrollr class="div-fixed z-400" data-16999="top:8rem;" data-17000="opacity:0; left:-50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">Historical data representing the rate of recharge within the aquifer for each year measured in thousands of acre feet.<br/>The blue segment of the aquifer represents the recharge zone.</p>
+        <p alt="">Historical data representing the rate of recharge within the aquifer for each year measured in thousands of acre feet.<br/>The middle segment of the aquifer represents the recharge zone. The bluer the color, the more water is being added.</p>
       </div>
     </div>
     <div skrollr class="div-fixed z-500" data-16999="top:16rem;" data-17000="opacity:0; left:50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:-50rem;">
