--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -2,16 +2,16 @@
   <div class="explore"> 
     <div skrollr id="ripple-1" class="div-fixed z-50 background flip-image-hor" data-0="left:-2rem;" data-1="opacity:0.1; top:0%;" data-500="opacity:0.3; top:-15%;" data-3500="opacity:0.3; top:-90%;" data-4000="opacity:0.1; top:-100%;"></div>
 
-    <div skrollr class="div-fixed z-500" data-0="top:54rem" data-1000="opacity:1; left:9rem;" data-2000="opacity:0; left:-10rem;">
+    <!-- <div skrollr class="div-fixed z-500" data-0="top:54rem" data-1000="opacity:1; left:9rem;" data-2000="opacity:0; left:-10rem;">
       <div class="text-suggestion">Scroll to continue...
         <div id="holder">
           <div class="dot"></div>
           <div class="pulse"></div>      
         </div>
       </div>
-    </div>
+    </div> -->
     
-    <div id="section00">
+    <!-- <div id="section00">
       <div skrollr class="div-fixed z-400" data-0="left:8rem;" data-1000="opacity:1; top:6.6rem;" data-2000="opacity:0; top:0rem;">
         <div class="text-title"><h1>Explore the Edwards Aquifer</h1></div>
       </div>
@@ -26,9 +26,9 @@
           <p>San Marcos River</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div id="section01">
+    <!-- <div id="section01">
       <div skrollr class="div-fixed z-400" data-1999="top:8rem;" data-2000="opacity:0; left:-50rem;" data-3000="opacity:1; left:5rem;">
         <div class="text-frame">
         <p>Select a location within the San Antonio Segment of the Balcones Fault Zone to discover the wonders of the Edwards Aquifer System in central Texas.</p>
@@ -44,15 +44,53 @@
           <p>Texas Major Aquifers</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div skrollr class="div-fixed z-500" data-2999="top:54rem" data-3500="opacity:0; left:-10rem;" data-4000="opacity:1; left:9rem;">
+    <!-- <div skrollr class="div-fixed z-500" data-2999="top:54rem" data-3500="opacity:0; left:-10rem;" data-4000="opacity:1; left:9rem;">
       <div class="text-suggestion">Select a Map Marker to Continue
         <div id="holder">
           <div class="dot"></div>
           <div class="pulse"></div>      
         </div>
       </div>
+    </div> -->
+
+    <div skrollr class="div-fixed z-200" data-0="top:-15rem; left:-15em;" data-1000="transform:scale(1) translate(0px,0px);" data-1999="transform:scale(4) translate(0px,-250px);" data-2000="opacity:1;" data-2250="opacity:0;">
+      <div id="explore-image-00" class="image-flyin"></div>
     </div>
+
+    <div skrollr class="div-fixed z-200" data-1999="top:-32rem; left:-30em; transform:scale(1)" data-2000="transform:scale(1) translate(0px,0px); opacity:0;" data-2250="transform:scale(1) translate(0px,0px); opacity:1;" data-3000="transform:scale(1) translate(0px,0px); opacity:1;" data-3500="transform:scale(3) translate(-20px,-170px); opacity:1;" data-4000="transform:scale(3) translate(-20px,-170px); opacity:0;">
+      <div id="explore-image-01" class="image-flyin"></div>
+    </div>
+    
+    <div skrollr class="div-fixed z-200" data-2000="top:-20rem; left:-19em; transform:scale(0.75);" data-3500="opacity:0;" data-3750="opacity:1;" data-4750="opacity:1;">
+      <div id="explore-image-02" class="image-flyin"></div>
+    </div>
+
+    <!-- ADD TEXT:  The Edwards Aquifer is broken into three significant segments. -->
+
+    <div skrollr class="div-fixed z-200" data-4000="top:-20rem; left:-19em; transform:scale(0.75);" data-4500="opacity:0;" data-4750="opacity:1;" data-5750="opacity:1;"  data-6000="opacity:0;">
+      <div id="explore-image-03" class="image-flyin"></div>
+    </div>
+
+    <!-- ADD TEXT:  Drainange Zone -->
+
+    <div skrollr class="div-fixed z-200" data-5000="top:-20rem; left:-19em; transform:scale(0.75);" data-5750="opacity:0;" data-6000="opacity:1;" data-6750="opacity:1;"  data-7000="opacity:0;">
+      <div id="explore-image-04" class="image-flyin"></div>
+    </div>
+
+    <!-- ADD TEXT:  Recharge Zone -->
+
+    <div skrollr class="div-fixed z-200" data-6000="top:-20rem; left:-19em; transform:scale(0.75);" data-6750="opacity:0;" data-7000="opacity:1;" data-7750="opacity:1;"  data-8000="opacity:0;">
+      <div id="explore-image-05" class="image-flyin"></div>
+    </div>
+
+    <!-- ADD TEXT:  Artesian Zone -->
+
+    <!-- Add In href link video elements. Need a style for the video elements. -->
+    <!-- Video: Leona (bottom left) - Wheat Field -->
+    <!-- Video: J17 (middle right) - Salamander -->
+    <!-- Video: San Marcos (top right) - Undulating Reeds-->
+
   </div>
 </div>
