minor notes in code.

--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -92,5 +92,7 @@
     <!-- Video: J17 (middle right) - Salamander -->
     <!-- Video: San Marcos (top right) - Undulating Reeds-->
 
+    <!-- Still need to trigger autoscroll at page load. -->
+
   </div>
 </div>
