--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -2,7 +2,7 @@
   <div class="explore"> 
     <div skrollr id="ripple-1" class="div-fixed z-50 background flip-image-hor" data-0="left:-2rem;" data-1="opacity:0.1; top:0%;" data-500="opacity:0.3; top:-15%;" data-7500="opacity:0.3; top:-90%;" data-8000="opacity:0.1; top:-100%;"></div>
 
-    <div class="clip-flyin div-fixed z-100">
+    <div class="div-fixed z-100">
 
       <div skrollr class="div-fixed z-100" 
         data-0="top:0rem; left:0rem; opacity:1;" data-8000="top:0rem; left:0rem; opacity:1;">
@@ -18,8 +18,8 @@
 
       <div skrollr class="div-fixed z-350" 
         data-0="top:10rem; left:25rem; opacity:1; transform:scale(1);"
-        data-1200="top:15rem; left:25rem; opacity:1; transform:scale(1.2);"
-        data-1500="top:18rem; left:25rem; opacity:0; transform:scale(3);">
+        data-1200="top:15rem; opacity:1; transform:scale(1.2);"
+        data-1500="top:18rem; opacity:0; transform:scale(3);">
         <div id="explore-text-title" class="text-flyin no-Ibar">Explore the Edwards Aquifer</div>
       </div>
 
