--- a/app/styles/maps-data.css
+++ b/app/styles/maps-data.css
@@ -4,4 +4,35 @@
   width: 64rem;
   height: 36rem;
   border: 2px solid #ffffff;
+  color: #000;
+}
+
+/*.leaflet-map div {
+  border: none;
+}
+*/
+.legend {
+  padding: 0.5rem 0.5rem;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  background: rgba(255,255,255, 0.7);
+  line-height: 1.5rem;
+  border-radius: 0.5rem;
+  color: #555;
+  width: 10rem;
+}
+
+.legend i {
+  color: #777;
+  width: 1rem;
+  height: 1rem;
+  float: left;
+  margin-right: 0.5rem;
+  opacity: 0.6;
+}
+
+.legend .info-label {
+  /*font: 14px/16px Arial, Helvetica, sans-serif;*/
+  vertical-align: middle;
+  width: 10rem;
+  cursor: default;
 }
