--- a/app/views/maps-data.html
+++ b/app/views/maps-data.html
@@ -4,7 +4,7 @@
     <div id="ripple-1" class="div-fixed z-50 background flip-image-hor contact-bg"></div>
 
     <div skrollr class="div-fixed z-300" data-0="opacity:1;" data-1500="opacity:1; top:6rem;" data-2000="opacity:0; top:60rem;">
-      <leaflet class="leaflet-map" layers="layers" legend="legend" geojson="geojson" center="texas" markers="markers" defaults="defaults"></leaflet><!-- center="texas" geojson="geojson" -->
+      <leaflet class="leaflet-map" layers="layers" overlays="overlays" legend="legend" geojson="geojson" center="texas" markers="markers" defaults="defaults"></leaflet><!-- center="texas" geojson="geojson" -->
     </div>
 
     <div skrollr class="div-fixed z-300" data-1500="opacity:0; top:60rem;" data-2000="opacity:1; top:6rem;" data-3500="opacity:1; top:6rem;" data-4000="opacity:0; top:60rem;">
