--- a/app/styles/interactives.css
+++ b/app/styles/interactives.css
@@ -33,12 +33,14 @@
 .data-value {
   font-weight: 700;
 }
-.legend {
+.legend-box {
   z-index: 200;
-  width: 26rem;
+  width: 20rem;
   line-height: 0.1rem;
   font-size: 1rem;
-  background-color: rgba(100, 100, 100, 0.2);
+  /*background-color: rgba(100, 100, 100, 0.2);*/
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  background: rgba(255,255,255, 0.7);
   border: 1px solid #000;
   border-top-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
