--- a/app/styles/maps-data.css
+++ b/app/styles/maps-data.css
@@ -1,3 +1,25 @@
+#map-nav {
+  top: 6rem;
+  left: 0.5rem;
+  width: 5rem;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  background: rgba(255,255,255, 0.9);
+  line-height: 1.5rem;
+  border: 1px solid #000;
+  border-top-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  color: #555;
+}
+#map-nav > ul {
+  margin: 0 auto;
+  /*left: auto;*/
+  /*right: auto;*/
+}
+#map-nav > ul > li {
+  display: inline;
+  list-style: none;
+}
+
 .leaflet-map {
   margin-left: 0;
   margin-right: 0;
@@ -7,18 +29,15 @@
   color: #000;
 }
 
-/*.leaflet-map div {
-  border: none;
-}
-*/
 .legend {
-  padding: 0.5rem 0.5rem;
+  padding: 0.5rem 1rem;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  background: rgba(255,255,255, 0.7);
+  background: rgba(255,255,255, 0.9);
   line-height: 1.5rem;
-  border-radius: 0.5rem;
+  border-top-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
   color: #555;
-  width: 10rem;
+  width: 9rem;
 }
 
 .legend i {
@@ -28,10 +47,10 @@
   float: left;
   margin-right: 0.5rem;
   opacity: 0.6;
+  border: 1px solid #000;
 }
 
 .legend > .info-label {
-  /*font: 14px/16px Arial, Helvetica, sans-serif;*/
   vertical-align: middle;
   width: 10rem;
   cursor: default;
