--- a/app/views/maps-data.html
+++ b/app/views/maps-data.html
@@ -3,23 +3,23 @@
     
     <div id="ripple-1" class="div-fixed z-50 background flip-image-hor contact-bg"></div>
 
-    <div skrollr class="div-fixed z-300" data-0="opacity:1;" data-1500="opacity:1; top:6rem;" data-2000="opacity:0; top:60rem;">
-      <leaflet class="leaflet-map" layers="layers" legend="legend" geojson="geojson" center="texas" markers="markers" defaults="defaults"></leaflet><!-- overlays="overlays"  -->
+    <div id="maps" skrollr class="div-fixed z-300" data-0="opacity:1;" data-1500="opacity:1; top:6rem;" data-2000="opacity:0; top:60rem;">
+      <leaflet id="map" class="leaflet-map" layers="layers" legend="legend" geojson="geojson" center="texas" markers="markers" defaults="defaults"></leaflet><!-- overlays="overlays"  -->
     </div>
 
-    <div skrollr class="div-fixed z-300" data-1500="opacity:0; top:60rem;" data-2000="opacity:1; top:6rem;" data-3500="opacity:1; top:6rem;" data-4000="opacity:0; top:60rem;">
+    <div id="recharge" skrollr class="div-fixed z-300" data-1500="opacity:0; top:60rem;" data-2000="opacity:1; top:6rem;" data-3500="opacity:1; top:6rem;" data-4000="opacity:0; top:60rem;">
       <div id="interactive" class="interactive interactive-frame">
         <eaa-gauge-data-interactive-recharge></eaa-gauge-data-interactive-recharge>
       </div>
     </div>
 
-    <div skrollr class="div-fixed z-300" data-3500="opacity:0; top:60rem;" data-4000="opacity:1; top:6rem;" data-5500="opacity:1; top:6rem;" data-6000="opacity:0; top:60rem;">
+    <div id="wells" skrollr class="div-fixed z-300" data-3500="opacity:0; top:60rem;" data-4000="opacity:1; top:6rem;" data-5500="opacity:1; top:6rem;" data-6000="opacity:0; top:60rem;">
       <div id="interactive" class="interactive interactive-frame">
         <eaa-gauge-data-interactive-wells></eaa-gauge-data-interactive-wells>
       </div>
     </div>
 
-    <div skrollr class="div-fixed z-300" data-5500="opacity:0; top:60rem;" data-6000="opacity:1; top:6rem;" data-7500="opacity:1; top:6rem;">
+    <div id="springs" skrollr class="div-fixed z-300" data-5500="opacity:0; top:60rem;" data-6000="opacity:1; top:6rem;" data-7500="opacity:1; top:6rem;">
       <div id="interactive" class="interactive interactive-frame">
         <eaa-gauge-data-interactive-springs></eaa-gauge-data-interactive-springs>
       </div>
