--- a/app/styles/maps-data.css
+++ b/app/styles/maps-data.css
@@ -29,6 +29,20 @@
   color: #000;
 }
 
+#map {
+  /*padding: 0;*/
+  /*margin: 0;*/
+  /*top: 7rem;*/
+  /*left: 2rem;*/
+  /*height: 768px;*/
+  /*width: 1024px;*/
+  /*width: 100%;*/
+  /*height: 100%;*/
+  /*width: 64rem;*/
+  /*height: 36rem;*/
+  /*border: 1px, solid #fff;*/
+}
+
 .legend {
   padding: 0.5rem 1rem;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
