--- a/app/views/maps-data.html
+++ b/app/views/maps-data.html
@@ -3,8 +3,12 @@
     
     <div id="ripple-1" class="div-fixed z-50 background flip-image-hor contact-bg"></div>
 
+    <!-- <div id="map"></div> -->
+
+    <!-- <leaflet-map id="map" class="leaflet-map"></leaflet-map> -->
+
     <div id="maps" skrollr class="div-fixed z-300" data-0="opacity:1;" data-1500="opacity:1; top:6rem;" data-2000="opacity:0; top:60rem;">
-      <leaflet id="map" class="leaflet-map" layers="layers" legend="legend" geojson="geojson" center="texas" markers="markers" defaults="defaults"></leaflet><!-- overlays="overlays"  -->
+      <leaflet id="map" class="leaflet-map" layers="layers" geojson="geojson" center="texas" markers="markers" defaults="defaults"></leaflet><!-- legend="legend"  -->
     </div>
 
     <div id="recharge" skrollr class="div-fixed z-300" data-1500="opacity:0; top:60rem;" data-2000="opacity:1; top:6rem;" data-3500="opacity:1; top:6rem;" data-4000="opacity:0; top:60rem;">
