--- a/app/styles/maps-data.css
+++ b/app/styles/maps-data.css
@@ -1,3 +1,12 @@
+/* MAP */
+
+#map {
+  width: 100%;
+  height: 100%;
+  top: 5%;
+  left: 0;
+}
+
 #map-nav {
   top: 6rem;
   left: 0.5rem;
@@ -53,3 +62,106 @@
   width: 10rem;
   cursor: default;
 }
+
+.popup {
+  color: #000;
+}
+
+/* DATA */
+
+button {
+  display: inline-block;
+  font-size: 1.1em;
+  font-weight: bold;
+  /*text-transform: uppercase;*/
+  padding: 10px 15px;
+  margin: 20px 10px;
+  color: #ccc;
+  background-color: #444;
+  background: -webkit-linear-gradient(#888, #555);
+  background: linear-gradient(#888, #555);
+  border: 0 none;
+  border-radius: 3px;
+  text-shadow: 0 -1px 0 #000;
+  box-shadow: 0 1px 0 #666, 0 2px 0 #444, 0 3px 3px rgba(0,0,0,0.6);
+  cursor: pointer;
+}
+
+button:hover
+{
+  -webkit-animation: pulsate 1s linear infinite;
+  animation: pulsate 1s linear infinite;
+}
+
+button:focus {
+  outline: none;
+  background-color: #777;
+}
+  
+@-webkit-keyframes pulsate
+{
+  0%   { color: #ddd; text-shadow: 0 -1px 0 #000; }
+  50%  { color: #fff; text-shadow: 0 -1px 0 #444, 0 0 2px #ffd, 0 0 4px #fff; }
+  100% { color: #ddd; text-shadow: 0 -1px 0 #000; }
+}
+    
+@keyframes pulsate
+{
+  0%   { color: #ddd; text-shadow: 0 -1px 0 #000; }
+  50%  { color: #fff; text-shadow: 0 -1px 0 #444, 0 0 2px #ffd, 0 0 4px #fff; }
+  100% { color: #ddd; text-shadow: 0 -1px 0 #000; }
+}
+
+.open-panel {
+  left:0 !important;
+}
+
+.open {
+  left:12% !important;
+}
+
+.transition { 
+  -webkit-transition: left 0.3s ease-out;  /* Chrome 1-25, Safari 3.2+ */
+  -moz-transition: left 0.3s ease-out;  /* Firefox 4-15 */
+  -o-transition: left 0.3s ease-out;  /* Opera 10.50–12.00 */
+  transition: left 0.3s ease-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+}
+
+.offstage {
+  left: -150%;
+}
+
+.backdrop {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.7);
+}
+
+#data-access {
+  top: 4.25%;
+  left: 60px;
+}
+
+#data-panel {
+  top: 4.25%;
+  padding-left: 18rem;
+}
+
+#data-slides-container {
+  /*margin-left: 10%;*/
+  /*margin-top: 2%;*/
+}
+
+.slide-label {
+  /*top: -100px;*/
+  /*left: 30%;*/
+  font-size: 3rem;
+  font-weight: 700;
+  color: #ccc;
+}
+
+.data-slide {
+  top: 25%;
+  left: 0;
+}
+
